--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <footer class="footer">
   &copy; 2025 Joshua Vallejo Sánchez. Todos los derechos reservados.
-    <a href="https://github.com/tu-usuario" target="_blank" rel="noopener" style="color:#ccc; text-decoration:none;">GitHub</a> | 
+    <a href="https://dleteo.github.io/Calculator-responsiv/o" target="_blank" rel="noopener" style="color:#ccc; text-decoration:none;">GitHub</a> | 
 </footer>
 
 </html>
